@@ -36,7 +36,6 @@
 
 #ifndef WIN32 /* ---win32 exclude unix header files */
 #include <sys/types.h>
-#include <sys/socket.h>
 #include <netinet/in.h>
 #include <netdb.h>
 #include <arpa/inet.h>
