@@ -69,7 +69,6 @@
 #ifndef WIN32 /* ---win32 exclude unix headers */
 #include <sys/types.h>
 #include <sys/time.h>
-#include <sys/socket.h>
 #include <netinet/in.h>
 #include <netinet/tcp.h>
 #include <netdb.h>
